--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
 
   cupertino_icons: ^1.0.8
   http: ^1.2.2
+  just_audio: ^0.9.41
+  audio_video_progress_bar: ^2.0.3
+  rxdart: ^0.28.0
 
 dev_dependencies:
   flutter_test:
